Co-authored-by: Bonface <Bonface-3020@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harshita's Portfolio</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -23,6 +24,46 @@
             </div>
         </div>
     </nav>
+
+    <div id="herocarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active" style="background-image: url('image\ 1.jpg');">
+                <div class="hero-text">
+                    <h1>I'm A Coding Student<br>Harshita Saini</h1>
+                    <p>Passionate and innovative web developer dedicated to turning ideas into engaging digital
+                        experiences. With expertise in crafting responsive, user-friendly websites using modern
+                        technologies like HTML, CSS, Javascript, and frameworks such as React and Bootstrap, I strive
+                        to create impactful solutions tailored to your needs. From dynamic interfaces to seamless
+                        functionality, I blend creativity and precision to bring concepts to life on the web. Let's
+                        collaborate to build something extraordinary!</p>
+                    <a href="#" class="btn-custom">Learn more</a>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('image\ 2.jpeg');">
+                <div class="hero-text">
+                    <h1>Building Beautiful Websites</h1>
+                    <p>Creating modern, user-friendly designs for the web.</p>
+                    <a href="#" class="btn-custom">See My work</a>
+                </div>
+            </div>
+            <div class="carousel-item" style="background-image: url('image\ 3.jpg');">
+                <div class="hero-text">
+                    <h1>Let's Work Together</h1>
+                    <p>Contact me to bring your ideas to life.</p>
+                    <a href="#" class="btn-custom">Get in Touch</a>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#herocarousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#herocarousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
