--- a/Portfolio.html
+++ b/Portfolio.html
@@ -23,6 +23,59 @@
             </div>
         </div>
     </nav>
+    <div class="container py-5">
+        <section id="about" class="about-section mb-5">
+            <div class="row align-items-center">
+                <div class="col-md-6"
+                    style="background-image: url('image 5.jpg'); height: 500px; background-size: cover; background-position: center; border-radius: 10px;">
+                </div>
+                <div class="col-md-6">
+                    <h2 class="text-center text-primary">About Me</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum consequuntur nesciunt, totam
+                        doloribus esse exercitationem assumenda culpa fugit distinctio. Saepe officiis explicabo esse
+                        enim labore velit eaque est non doloremque?</p>
+                </div>
+            </div>
+        </section>
+        <section id="projects" class="projects-section">
+            <h2 class="text-center">Projects Done</h2>
+            <div class="row mt-4">
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card p-3">
+                        <img src="image 6.jpg" class="card-img-top" alt="Project 1 image">
+                        <div class="card-body">
+                            <h5 class="card-title">Shopping List</h5>
+                            <p class="card-text">A project of a smart shopping list.</p>
+                            <a href="https://github.com/yourusername/project1" target="_blank"
+                                class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card p-3">
+                        <img src="image 6.jpg" class="card-img-top" alt="Project 1 image">
+                        <div class="card-body">
+                            <h5 class="card-title">Shopping List</h5>
+                            <p class="card-text">A project of a smart shopping list.</p>
+                            <a href="https://github.com/yourusername/project1" target="_blank"
+                                class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mb-4">
+                    <div class="card project-card p-3">
+                        <img src="image 6.jpg" class="card-img-top" alt="Project 1 image">
+                        <div class="card-body">
+                            <h5 class="card-title">Shopping List</h5>
+                            <p class="card-text">A project of a smart shopping list.</p>
+                            <a href="https://github.com/yourusername/project1" target="_blank"
+                                class="btn btn-primary">View on GitHub</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
